@@ -7,6 +7,8 @@ NEW FEATURES
 
     o a new option in `seqRecompress(, compress="none")` to uncompress all data
 
+    o `seqGetData()` allows a GDS file name as the first argument
+
 
 CHANGES IN VERSION 1.22.4-1.22.6
 -------------------------
